[gd_scene load_steps=30 format=2]

[ext_resource path="res://UI_Scenes/LevelSelect.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Comfortaa/Comfortaa-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/menus/Level Select Screen/BG.png" type="Texture" id=3]
[ext_resource path="res://assets/menus/Button.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/level_select/level_book_btn.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/loading_crystal/Loading Animation1.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/loading_crystal/Loading Animation5.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/loading_crystal/Loading Animation6.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/loading_crystal/Loading Animation7.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/loading_crystal/Loading Animation8.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/loading_crystal/Loading Animation9.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/loading_crystal/Loading Animation10.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/loading_crystal/Loading Animation14.png" type="Texture" id=13]
[ext_resource path="res://assets/ui/loading_crystal/Loading Animation15.png" type="Texture" id=14]
[ext_resource path="res://assets/ui/loading_crystal/Loading Animation11.png" type="Texture" id=15]
[ext_resource path="res://assets/ui/loading_crystal/Loading Animation2.png" type="Texture" id=16]
[ext_resource path="res://assets/ui/loading_crystal/Loading Animation12.png" type="Texture" id=17]
[ext_resource path="res://assets/ui/loading_crystal/Loading Animation13.png" type="Texture" id=18]
[ext_resource path="res://assets/ui/loading_crystal/Loading Animation3.png" type="Texture" id=19]
[ext_resource path="res://assets/ui/loading_crystal/Loading Animation4.png" type="Texture" id=20]
[ext_resource path="res://assets/ui/comic_book_ui/Button.png" type="Texture" id=21]
[ext_resource path="res://assets/ui/W_Key.png" type="Texture" id=22]
[ext_resource path="res://assets/ui/touch_icon.png" type="Texture" id=24]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "loading",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 2 )

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1918.0
margin_bottom = 1078.0
texture = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 703.0
margin_top = 92.0
margin_right = -58.0
margin_bottom = -38.0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
margin_right = 1159.0
margin_bottom = 950.0
rect_min_size = Vector2( 1120, 950 )
rect_clip_content = false
scroll_horizontal_enabled = false

[node name="LevelGrid" type="GridContainer" parent="MarginContainer/ScrollContainer"]
unique_name_in_owner = true
custom_constants/vseparation = 80
custom_constants/hseparation = 60
columns = 2

[node name="ComicButton" type="TextureButton" parent="."]
unique_name_in_owner = true
margin_left = 60.0
margin_top = 199.0
margin_right = 466.0
margin_bottom = 346.0
texture_normal = ExtResource( 5 )

[node name="Label" type="Label" parent="ComicButton"]
margin_left = 110.0
margin_top = 49.0
margin_right = 321.0
margin_bottom = 107.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "My Book"

[node name="SignOut" type="TextureButton" parent="."]
margin_left = 62.0
margin_top = 783.0
margin_right = 468.0
margin_bottom = 916.0
texture_normal = ExtResource( 4 )

[node name="Label2" type="Label" parent="SignOut"]
margin_left = 69.0
margin_top = 34.0
margin_right = 346.0
margin_bottom = 102.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Sign Out"

[node name="LoadTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="LoadingAnim" type="AnimatedSprite" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2( 1231, 533 )
frames = SubResource( 3 )
animation = "loading"
frame = 12

[node name="loading_label" type="Label" parent="LoadingAnim"]
margin_left = -65.0
margin_top = 148.0
margin_right = 96.0
margin_bottom = 185.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Loading..."

[node name="HowToPlay" type="TextureButton" parent="."]
margin_left = 60.0
margin_top = 426.0
margin_right = 438.0
margin_bottom = 552.0
texture_normal = ExtResource( 21 )

[node name="Label" type="Label" parent="HowToPlay"]
margin_left = 37.0
margin_top = 23.0
margin_right = 340.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "How to Play"

[node name="TouchControls" type="TextureButton" parent="."]
unique_name_in_owner = true
margin_left = 60.0
margin_top = 604.0
margin_right = 438.0
margin_bottom = 730.0
toggle_mode = true
texture_normal = ExtResource( 21 )

[node name="control_label" type="Label" parent="TouchControls"]
unique_name_in_owner = true
margin_left = 99.0
margin_top = 24.0
margin_right = 351.0
margin_bottom = 81.0
grow_horizontal = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Keyboard"
align = 1

[node name="key_icon" type="Sprite" parent="TouchControls"]
unique_name_in_owner = true
position = Vector2( 61, 51 )
scale = Vector2( 0.548001, 0.548001 )
texture = ExtResource( 22 )

[node name="touch_icon" type="Sprite" parent="TouchControls"]
unique_name_in_owner = true
visible = false
position = Vector2( 72, 57 )
scale = Vector2( 0.140625, 0.140625 )
texture = ExtResource( 24 )

[connection signal="pressed" from="ComicButton" to="." method="_on_ComicButton_pressed"]
[connection signal="pressed" from="SignOut" to="." method="_on_SignOut_pressed"]
[connection signal="timeout" from="LoadTimer" to="." method="_on_LoadTimer_timeout"]
[connection signal="pressed" from="HowToPlay" to="." method="_on_HowToPlay_pressed"]
[connection signal="toggled" from="TouchControls" to="." method="_on_TouchControls_toggled"]
